--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@mui/x-data-grid": "^7.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.11",
+    "@mui/material": "^6.1.3",
+    "@mui/x-data-grid": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@toolpad/core": "^0.7.0",
     "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
