--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Hostinger
 on:
   push:
     branches:
-      - main  # ou la branche de production que vous souhaitez utiliser
+      - master  # ou la branche de production que vous souhaitez utiliser
 
 jobs:
   deploy:
