--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-front",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://roleplaygames.online/",
   "type": "module",
   "scripts": {
     "dev": "vite",
